adding env file a fixing some code smell